# cxxutils

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Doxyfile.in  README.md  annotated.html  annotated.js  annotated_dup.js  benchmark_8hxx.html  benchmark_8hxx.js  benchmark_8hxx_source.html  classcxxutils_1_1benchmark-members.html  classcxxutils_1_1benchmark.html  classcxxutils_1_1benchmark.js  classcxxutils_1_1singleton-members.html  classcxxutils_1_1singleton.html  classcxxutils_1_1singleton.js  classcxxutils_1_1singleton__error-members.html  classcxxutils_1_1singleton__error.html  classcxxutils_1_1singleton__error.js  classes.html  defcon_8hxx.html  defcon_8hxx.js  defcon_8hxx_source.html  dir_06b0153697394118e8ec11375c424a25.html  dir_0ca6f785ca0b1e185292e495e958a3cb.html  dir_57d2fae8e276a6fcad1d671f49db8908.html  dir_682a1268882884c3bf399cfdde1ae443.html  dir_899c1293207adb209a869d44e1f321c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e04ae2849dfa520b4ee2c9f7e9ff15de.html  files.html  files.js  functions.html  functions_func.html  functions_type.html  functions_vars.html  (+29 more)
cmake/: EnableCxx11.cmake  TestCxx11Features.cmake  test_cxx11_explicitcast.cxx
cmake/Modules/cxx11/: CheckCxx11.cmake  cxx11_auto.cxx  cxx11_constexpr.cxx  cxx11_defaultdelete.cxx  cxx11_explicitcast.cxx  cxx11_features.hxx.in  cxx11_initlist.cxx  cxx11_lambda.cxx  cxx11_noexcept.cxx  cxx11_nullptr.cxx  cxx11_overridefinal.cxx  cxx11_rangefor.cxx  cxx11_rvalueref.cxx  cxx11_staticassert.cxx  cxx11_strongenum.cxx  cxx11_tmpalias.cxx  cxx11_trailingreturn.cxx  cxx11_userliteral.cxx  cxx11_variadic.cxx
contrib/: CMakeLists.txt
include/cxxutils/: benchmark.hxx  config.hxx.in  defcon.hxx  macros.hxx  meminfo.hxx  noncopyable.hxx  none.hxx  singleton.hxx
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  functions_8.js  namespaces_0.js  searchdata.js  variables_1.js
src/: benchmark.cxx  meminfo.cxx  singleton.cxx
test/: benchmark.cxx  benchmark.hxx  defcon.hxx  main.cxx  meminfo.cxx  meminfo.hxx  noncopyable.cxx  noncopyable.hxx  none.hxx  singleton.cxx  singleton.hxx
